 * Fix: Prevent audit log report from failing on missing models (Andy Chosak)
 * Fix: Add missing log information for `wagtail.schedule.cancel` (Stefan Hammer)
 * Fix: Fix timezone activation leaking into subsequent requests in `require_admin_access()` (Stefan Hammer)
 * Fix: Prevent matches from unrelated models from leaking into SQLite FTS searches (Matt Westcott)


4.1.2 (06.02.2023)
~~~~~~~~~~~~~~~~~~

 * Fix: Make "Cancel scheduled publish" button correctly redirect back to the edit view (Sage Abdullah)
 * Fix: Prevent crash when reverting revisions on a snippet with `PreviewableMixin` applied (Sage Abdullah)
 * Fix: Use consistent heading styles on top-level fields in the page editor (Sage Abdullah)
 * Fix: Allow button labels to wrap onto two lines in dropdown buttons (Coen van der Kamp)
 * Fix: Move DateField, DateTimeField, TimeField comment buttons to be right next to the fields (Theresa Okoro)
 * Fix: Support text resizing in workflow steps cards (Ivy Jeptoo)
 * Fix: Use the correct padding for autocomplete block picker (Umar Farouk Yunusa)
 * Fix: Fix horizontal positioning of rich text inline toolbar (Thibaud Colas)
 * Fix: Close the userbar when clicking its toggle (Albina Starykova)
 * Fix: Do not show bulk actions checkbox in page type usage view (Sage Abdullah)
 * Fix: Prevent account name from overflowing the sidebar (Aman Pandey)
 * Fix: Ensure edit form is displayed as unlocked immediately after cancelling a workflow (Sage Abdullah)
 * Fix: Prevent `latest_revision` pointer from being copied over when copying translatable snippets for translation (Sage Abdullah)
 * Docs: Document potential data loss for BaseLogEntry migration in 3.0 (Sage Abdullah)
 * Docs: Add documentation for the reference index mechanism (Daniel Kirkham)


4.1.1 (11.11.2022)
~~~~~~~~~~~~~~~~~~

 * Fix: Fix issue where lock/unlock buttons would not work on the Dashboard (home) page or the page index listing via the status sidebar (Stefan Hammer)