@@ -74,7 +74,7 @@ documentation_extras = [
     "sphinxcontrib-spelling>=5.4.0,<6",
     "Sphinx>=1.5.2",
     "sphinx-autobuild>=0.6.0",
-    "sphinx-wagtail-theme==5.3.2",
+    "sphinx-wagtail-theme==6.0.0",
     "myst_parser==0.18.1",
     "sphinx_copybutton>=0.5,<1.0",
 ]
